--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,5 +10,10 @@ pipeline {
                 sh 'mvn clean package'
             }
         }
+        stage('deploy') {
+            steps {
+                sh 'mvn clean deploy -DmuleDeploy'
+            }
+        }
     }
 }
