--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 						<uri>https://anypoint.mulesoft.com</uri>
 						<provider>MC</provider>
 						<environment>Sandbox</environment>
-						<target>Sandbox</target>
-						<muleVersion>${muleVersion}</muleVersion>
+						<target>Cloudhub-US-East-2</target>
+						<muleVersion>4.8.0:8e</muleVersion>
 						<username>SATYA_INNOVATION</username>
 						<password>MYnoki@523@</password>
 						<applicationName>vault-cloudhub</applicationName>
