--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 	</pluginRepositories>
 	<distributionManagement>
     <repository>
-      <id>Repository</id>
+      <id>anypoint-exchange-v3</id>
       <name>Corporate Repository</name>
       <url>https://maven.anypoint.mulesoft.com/api/v3/organizations/c4279fc5-5496-4e4c-a65f-a293a75f4ebb/maven</url>
       <layout>default</layout>
