--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,13 +7,16 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'mvn clean package'
-            }
+                withMaven(maven: 'maven-3.6.3', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
+                    sh 'mvn clean package'
+                }
         }
         stage('deploy') {
+
             steps {
-                sh 'mvn clean deploy -DmuleDeploy'
-            }
+                withMaven(maven: 'maven-3.6.3', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
+                    sh 'mvn clean deploy -DmuleDeploy'
+                }
         }
     }
 }
