--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                withMaven(maven: 'maven-3.6.3', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
+                withMaven(maven: 'Maven', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
                     sh 'mvn clean package'
                 }
         }
@@ -15,7 +15,7 @@ pipeline {
         stage('deploy') {
 
             steps {
-                withMaven(maven: 'maven-3.6.3', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
+                withMaven(maven: 'Maven', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
                     sh 'mvn clean deploy -DmuleDeploy'
                 }
         
