--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git url: 'https://your-git-repository-url.git', branch: 'main'
+                git url: 'https://github.com/satyabratadalai/vault-cloudhub-app.git', branch: 'main'
             }
         }
         
