--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
 						<replicas>1</replicas>
 						<vCores>0.1</vCores>
 						<secureProperties>
-							<database.username>TEST</database.username>
-							<database.password>TESTPASSWORD</database.password>
-						</secureProperties>
+    <database.username>${env.DATABASE_USERNAME}</database.username>
+    <database.password>${env.DATABASE_PASSWORD}</database.password>
+</secureProperties>
 						<deploymentSettings>
 							<http>
 								<inbound>
