--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,6 @@
 pipeline {
     agent any
     environment {
-        // Including the necessary --add-opens options
         MAVEN_OPTS = "--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
     }
     stages {
@@ -10,59 +9,53 @@ pipeline {
                 git url: 'https://github.com/satyabratadalai/vault-cloudhub-app.git', branch: 'main'
             }
         }
-
         stage('Fetch Secrets') {
             steps {
                 script {
                     def vaultPath = ''
                     echo "Environment Selected : ${ENV}"
-                    if ("${ENV}" == 'dev') {
-                        vaultPath = "secret/mulesoft-dev"
-                    } else if ("${ENV}" == 'uat') {
-                        vaultPath = "secret/mulesoft-uat"
-                    } else if ("${ENV}" == 'prod') {
-                        vaultPath = "secret/mulesoft-prod"
-                    } else {
-                        echo "INVALID ENV"
-                        return // Exit the stage if the environment is invalid
+                    switch(ENV) {
+                        case "dev":
+                            vaultPath = "secret/mulesoft-dev"
+                            break
+                        case "uat":
+                            vaultPath = "secret/mulesoft-uat"
+                            break
+                        case "prod":
+                            vaultPath = "secret/mulesoft-prod"
+                            break
+                        default:
+                            echo "INVALID ENV"
+                            return
                     }
 
-                    // Initialize and Fetch secrets from Vault
+                    // Fetch and set secrets from Vault
                     def secrets = [
                         [$class: 'VaultSecret', path: vaultPath, secretValues: [
                             [$class: 'VaultSecretValue', envVar: 'DATABASE_USERNAME', vaultKey: 'database.username'],
                             [$class: 'VaultSecretValue', envVar: 'DATABASE_PASSWORD', vaultKey: 'database.password']
                         ]]
                     ]
-                    // Store secrets in environment variables
                     withVault([vaultSecrets: secrets, vaultConfigurationId: 'vault-token']) {
                         env.DATABASE_USERNAME = env.DATABASE_USERNAME
                         env.DATABASE_PASSWORD = env.DATABASE_PASSWORD
+                        env.DATABASE_USERNAME_DUMMY = 'DUMMY'
+                        env.DATABASE_PASSWORD_DUMMY = 'DUMMY'
                     }
                 }
             }
         }
-
-        stage('Build') {
+        stage('Move To Exchange') {
             steps {
                 withMaven(maven: 'Maven', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
-                    sh "mvn clean package -Ddatabase.username=${env.DATABASE_USERNAME} -Ddatabase.password=${env.DATABASE_PASSWORD}"
+                    sh "mvn clean package deploy -Ddatabase.username=${env.DATABASE_USERNAME_DUMMY} -Ddatabase.password=${env.DATABASE_PASSWORD_DUMMY}"
                 }
             }
-        }
 
-        stage('Upload to Exchange') {
+         stage('Deploy To Cloudhub 2.0') {
             steps {
                 withMaven(maven: 'Maven', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
-                    sh "mvn clean deploy -Ddatabase.username=${env.DATABASE_USERNAME} -Ddatabase.password=${env.DATABASE_PASSWORD}"
-                }
-            }
-        }
-
-        stage('Deploy To Cloudhub 2.0') {
-            steps {
-                withMaven(maven: 'Maven', mavenSettingsConfig: '3802749b-765f-4b02-86ab-bcf94c417beb') {
-                    sh "mvn clean deploy -DmuleDeploy -Ddatabase.username=${env.DATABASE_USERNAME} -Ddatabase.password=${env.DATABASE_PASSWORD}"
+                    sh "mvn clean package deploy -DmuleDeploy -Ddatabase.username=${env.DATABASE_USERNAME} -Ddatabase.password=${env.DATABASE_PASSWORD}"
                 }
             }
         }
